--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
         <label class="block text-sm font-semibold">Category</label>
         <select id="category" name="category" required class="w-full border rounded-md p-2">
           <option value="">Select Category</option>
-          <option value="MPMO Support">MPMO Support</option>
-          <option value="Provincial Support">HCSC Questions/Masterlists</option>
-          <option value="Regional Support">UI/UX</option>
+          <option value="HCSC Questions/Masterlists">HCSC Questions/Masterlists</option>
+          <option value="UI/UX">UI/UX</option>
           <option value="NPMO Support">User Role and Access</option>
-          <option value="Provincial Support">Functionality Errors</option>
-          <option value="Regional Support">Backend</option>
-          <option value="NPMO Support">Dashboards, Reports and Line List</option>
+          <option value="User Role and Access">Functionality Errors</option>
+          <option value="Backend">Backend</option>
+          <option value="Dashboards, Reports and Line List">Dashboards, Reports and Line List</option>
         </select>
       </div>
 
