--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <div class="col-span-2">
         <label class="block text-sm font-semibold">Attachments (optional)</label>
-        <input type="file" name="file" multiple class="w-full border rounded-md p-2" />
+        <input type="file" name="files" multiple class="w-full border rounded-md p-2" />
       </div>
 
       <div class="col-span-2 text-center mt-4">
@@ -84,7 +84,7 @@
   </div>
 
   <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbz96c879Sp5g-e9NcxEhvv1i8IwcQ-bKV-tzggbN75htBea5MsAxvS13dpWcq8aUCXd/exec"; // <-- Replace with your Apps Script Web App URL
+const scriptURL = "https://script.google.com/macros/s/AKfycbzU8Noi5sCMXD1dvZz_J0rLP-pZ82G45VDUsL6PXcGzl05mxVaAGqIZDece_iVY2ZB3/exec"; // <-- Replace with your Apps Script Web App URL
 
 const supportSelect = document.getElementById("supportLevel");
 const regionWrapper = document.getElementById("regionWrapper");
