--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>PMNP-IS Help Center</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<<body class="bg-gray-50 min-h-screen flex items-center justify-center">
+<body class="bg-gray-50 min-h-screen flex items-center justify-center">
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-2xl">
     <div class="flex justify-center mb-4">
       <img src="logo.png" alt="PMNP-IS Logo" class="h-16 w-auto" />
