--- a/index.html
+++ b/index.html
@@ -155,14 +155,36 @@ supportSelect.addEventListener("change", () => {
 });
 
 // --- Form submission ---
+<script>
+const scriptURL = "https://script.google.com/macros/s/AKfycbzrHKojFVI3LjCilYv6SXYq6MZqHbABIbYpxicvEQVhjMUGk3rZWw9r_UUmX0BvtPWn/exec";
+
 document.getElementById("ticketForm").addEventListener("submit", async (e) => {
   e.preventDefault();
   const form = e.target;
-  const formData = new FormData(form);
+
+  // ✅ Build FormData manually for consistent field names
+  const formData = new FormData();
+  const fields = [
+    "name", "email", "cc", "supportLevel", "region", "province",
+    "municipality", "category", "message"
+  ];
+  fields.forEach(f => {
+    const el = form.querySelector(`[name="${f}"]`);
+    if (el) formData.append(f, el.value || "");
+  });
+
+  // ✅ Add files (Apps Script can only parse file1, file2,...)
+  const files = form.querySelector('input[name="files"]').files;
+  Array.from(files).forEach((file, i) => {
+    formData.append(`file${i + 1}`, file, file.name);
+  });
 
   try {
-    const response = await fetch(scriptURL, { method: "POST", body: formData });
-    const result = await response.json();
+    const res = await fetch(scriptURL, {
+      method: "POST",
+      body: formData,
+    });
+    const result = await res.json();
 
     if (result.success) {
       showToast(`✅ Ticket submitted successfully! ID: ${result.ticketId}`, "bg-green-600");
@@ -170,20 +192,19 @@ document.getElementById("ticketForm").addEventListener("submit", async (e) => {
     } else {
       showToast(`❌ ${result.error}`, "bg-red-600");
     }
-  } catch (error) {
-    console.error(error);
-    showToast("❌ Error submitting ticket. Please try again.", "bg-red-600");
+  } catch (err) {
+    console.error(err);
+    showToast("❌ Network or script error. Please try again.", "bg-red-600");
   }
 });
 
-// --- Toast helper ---
 function showToast(msg, color) {
+  const toast = document.getElementById("toast");
   toast.textContent = msg;
   toast.className = `mt-4 text-center text-white py-2 rounded-md ${color}`;
   toast.classList.remove("hidden");
   setTimeout(() => toast.classList.add("hidden"), 4000);
 }
 </script>
-
 </body>
 </html>
