--- a/index.html
+++ b/index.html
@@ -4,187 +4,171 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PMNP-IS Help Center</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-50 min-h-screen flex items-center justify-center">
-  <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-2xl">
-    <div class="flex justify-center mb-4">
-      <img src="logo.png" alt="PMNP-IS Logo" class="h-16 w-auto" />
-    </div>
-
-    <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">PMNP-IS Help Center</h1>
-
-    <form id="ticketForm" class="grid grid-cols-1 md:grid-cols-2 gap-4" enctype="multipart/form-data">
-      <div class="col-span-2">
-        <label class="block text-sm font-semibold">Full Name</label>
-        <input type="text" name="name" required class="w-full border rounded-md p-2" />
-      </div>
-
-      <div>
-        <label class="block text-sm font-semibold">Email</label>
-        <input type="email" name="email" required class="w-full border rounded-md p-2" />
-      </div>
-
-      <div>
-        <label class="block text-sm font-semibold">CC (optional)</label>
-        <input type="email" name="cc" placeholder="Enter additional email" class="w-full border rounded-md p-2" />
-      </div>
-
-      <div class="col-span-2">
-        <label class="block text-sm font-semibold">Support Level</label>
-        <select id="supportLevel" name="supportLevel" required class="w-full border rounded-md p-2">
-          <option value="">Select Support Level</option>
-          <option value="MPMO Support">MPMO Support</option>
-          <option value="Provincial Support">Provincial Support</option>
-          <option value="Regional Support">Regional Support</option>
-          <option value="NPMO Support">NPMO Support</option>
-        </select>
-      </div>
-
-      <div id="regionWrapper" class="hidden col-span-2 md:col-span-1">
-        <label class="block text-sm font-semibold">Region</label>
-        <select id="region" name="region" class="w-full border rounded-md p-2"></select>
-      </div>
-
-      <div id="provinceWrapper" class="hidden col-span-2 md:col-span-1">
-        <label class="block text-sm font-semibold">Province</label>
-        <select id="province" name="province" class="w-full border rounded-md p-2"></select>
-      </div>
-
-      <div id="municipalityWrapper" class="hidden col-span-2">
-        <label class="block text-sm font-semibold">Municipality</label>
-        <select id="municipality" name="municipality" class="w-full border rounded-md p-2"></select>
-      </div>
-
-      <div class="col-span-2">
-        <label class="block text-sm font-semibold">Category</label>
-        <select id="category" name="category" required class="w-full border rounded-md p-2">
-          <option value="">Select Category</option>
-          <option value="HCSC Questions/Masterlists">HCSC Questions/Masterlists</option>
-          <option value="UI/UX">UI/UX</option>
-          <option value="User Role and Access">User Role and Access</option>
-          <option value="Functionality Errors">Functionality Errors</option>
-          <option value="Backend">Backend</option>
-          <option value="Dashboards, Reports and Line List">Dashboards, Reports and Line List</option>
-        </select>
-      </div>
-
-      <div class="col-span-2">
-        <label class="block text-sm font-semibold">Description</label>
-        <textarea name="message" rows="3" required class="w-full border rounded-md p-2"></textarea>
-      </div>
-
-      <div class="col-span-2">
-        <label class="block text-sm font-semibold">Attachments (optional)</label>
-        <input type="file" name="files" id="files" multiple class="w-full border rounded-md p-2" />
-      </div>
-
-      <div class="col-span-2 text-center mt-4">
-        <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">Submit Ticket</button>
-      </div>
-    </form>
-
-    <div id="toast" class="hidden mt-4 text-center text-white py-2 rounded-md"></div>
-  </div>
-
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbzrHKojFVI3LjCilYv6SXYq6MZqHbABIbYpxicvEQVhjMUGk3rZWw9r_UUmX0BvtPWn/exec";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbwQl_ZuiNi43b6_vxxvT8X1nTWb3kKzwy0G0vBb6A8KWjgNfKAIxowXPzp-PBaBJDMH/exec"; // <<< replace with deployed Apps Script URL
 
-const supportSelect = document.getElementById("supportLevel");
-const regionWrapper = document.getElementById("regionWrapper");
-const provinceWrapper = document.getElementById("provinceWrapper");
-const municipalityWrapper = document.getElementById("municipalityWrapper");
+    async function loadRegions() {
+      const res = await fetch("regionData.json");
+      const data = await res.json();
+      window.regionData = data;
+      populateRegionDropdown();
+    }
 
-const regionSelect = document.getElementById("region");
-const provinceSelect = document.getElementById("province");
-const municipalitySelect = document.getElementById("municipality");
-const toast = document.getElementById("toast");
+    function populateRegionDropdown() {
+      const regionSelect = document.getElementById("region");
+      regionSelect.innerHTML = '<option value="">-- Select Region --</option>';
+      Object.keys(regionData).forEach(region => {
+        const opt = document.createElement("option");
+        opt.value = region;
+        opt.textContent = region;
+        regionSelect.appendChild(opt);
+      });
+    }
 
-// --- Load Region Data ---
-let regionData = {};
-fetch("regionData.json")
-  .then(res => res.json())
-  .then(data => {
-    regionData = data;
-    regionSelect.innerHTML = `<option value="">Select Region</option>`;
-    Object.keys(regionData).forEach(region => {
-      regionSelect.innerHTML += `<option value="${region}">${region}</option>`;
-    });
-  });
+    function updateProvinceDropdown() {
+      const region = document.getElementById("region").value;
+      const provinceSelect = document.getElementById("province");
+      const muniSelect = document.getElementById("municipality");
 
-// --- Dropdown chaining ---
-regionSelect.addEventListener("change", () => {
-  const region = regionSelect.value;
-  provinceSelect.innerHTML = `<option value="">Select Province</option>`;
-  municipalitySelect.innerHTML = `<option value="">Select Municipality</option>`;
-  if (region && regionData[region]) {
-    Object.keys(regionData[region]).forEach(prov => {
-      provinceSelect.innerHTML += `<option value="${prov}">${prov}</option>`;
-    });
-  }
-});
+      provinceSelect.innerHTML = '<option value="">-- Select Province --</option>';
+      muniSelect.innerHTML = '<option value="">-- Select Municipality --</option>';
 
-provinceSelect.addEventListener("change", () => {
-  const region = regionSelect.value;
-  const province = provinceSelect.value;
-  municipalitySelect.innerHTML = `<option value="">Select Municipality</option>`;
-  if (region && province && regionData[region][province]) {
-    regionData[region][province].forEach(muni => {
-      municipalitySelect.innerHTML += `<option value="${muni}">${muni}</option>`;
-    });
-  }
-});
+      if (region && regionData[region]) {
+        Object.keys(regionData[region]).forEach(prov => {
+          const opt = document.createElement("option");
+          opt.value = prov;
+          opt.textContent = prov;
+          provinceSelect.appendChild(opt);
+        });
+      }
+    }
 
-// --- Support Level visibility logic ---
-supportSelect.addEventListener("change", () => {
-  const selected = supportSelect.value;
-  regionWrapper.classList.add("hidden");
-  provinceWrapper.classList.add("hidden");
-  municipalityWrapper.classList.add("hidden");
+    function updateMunicipalityDropdown() {
+      const region = document.getElementById("region").value;
+      const province = document.getElementById("province").value;
+      const muniSelect = document.getElementById("municipality");
 
-  if (selected === "MPMO Support") {
-    regionWrapper.classList.remove("hidden");
-    provinceWrapper.classList.remove("hidden");
-    municipalityWrapper.classList.remove("hidden");
-  } else if (selected === "Provincial Support") {
-    regionWrapper.classList.remove("hidden");
-    provinceWrapper.classList.remove("hidden");
-  } else if (selected === "Regional Support") {
-    regionWrapper.classList.remove("hidden");
-  }
-});
+      muniSelect.innerHTML = '<option value="">-- Select Municipality --</option>';
+      if (region && province && regionData[region] && regionData[region][province]) {
+        regionData[region][province].forEach(muni => {
+          const opt = document.createElement("option");
+          opt.value = muni;
+          opt.textContent = muni;
+          muniSelect.appendChild(opt);
+        });
+      }
+    }
 
-// --- Form submission (fixed file upload) ---
-document.getElementById("ticketForm").addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const form = e.target;
-  const formData = new FormData(form);
+    function updateFields() {
+      const support = document.getElementById("supportLevel").value;
+      document.getElementById("regionDiv").style.display = "none";
+      document.getElementById("provinceDiv").style.display = "none";
+      document.getElementById("municipalityDiv").style.display = "none";
 
-  try {
-    // ✅ Send as raw multipart body
-    const response = await fetch(scriptURL, {
-      method: "POST",
-      body: formData,
-      mode: "no-cors" // <-- ensures Google Apps Script accepts it
-    });
+      if (support === "MPMO Support") {
+        document.getElementById("regionDiv").style.display = "block";
+        document.getElementById("provinceDiv").style.display = "block";
+        document.getElementById("municipalityDiv").style.display = "block";
+      } else if (support === "Provincial Support") {
+        document.getElementById("regionDiv").style.display = "block";
+        document.getElementById("provinceDiv").style.display = "block";
+      } else if (support === "Regional Support") {
+        document.getElementById("regionDiv").style.display = "block";
+      }
+    }
 
-    // ⚠️ Apps Script can't return JSON in no-cors mode, so show success message directly
-    showToast("✅ Ticket submitted successfully! Files will be processed shortly.", "bg-green-600");
-    form.reset();
+    async function handleSubmit(e) {
+      e.preventDefault();
+      const form = document.getElementById("helpForm");
+      const status = document.getElementById("status");
 
-  } catch (error) {
-    console.error(error);
-    showToast("❌ Error submitting ticket. Please try again.", "bg-red-600");
-  }
-});
+      status.textContent = "Submitting...";
+      status.className = "text-yellow-600";
 
-// --- Toast helper ---
-function showToast(msg, color) {
-  toast.textContent = msg;
-  toast.className = `mt-4 text-center text-white py-2 rounded-md ${color}`;
-  toast.classList.remove("hidden");
-  setTimeout(() => toast.classList.add("hidden"), 4000);
-}
-</script>
+      const formData = new FormData(form);
+
+      try {
+        const response = await fetch(scriptURL, { method: "POST", body: formData });
+        const result = await response.json();
+
+        if (result.success) {
+          status.textContent = "✅ Ticket submitted successfully!";
+          status.className = "text-green-600";
+          form.reset();
+        } else {
+          status.textContent = "❌ Error: " + (result.error || "Please try again.");
+          status.className = "text-red-600";
+        }
+      } catch (err) {
+        status.textContent = "❌ Network error: " + err;
+        status.className = "text-red-600";
+      }
+    }
+
+    window.onload = loadRegions;
+  </script>
+</head>
+<body class="bg-gray-100 flex justify-center items-center min-h-screen">
+  <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-lg">
+    <h1 class="text-2xl font-bold mb-4 text-center">PMNP-IS Help Center</h1>
+
+    <form id="helpForm" onsubmit="handleSubmit(event)" enctype="multipart/form-data">
+      <label class="block mb-2 font-semibold">Name:</label>
+      <input type="text" name="name" class="border w-full p-2 mb-3 rounded" required />
+
+      <label class="block mb-2 font-semibold">Email:</label>
+      <input type="email" name="email" class="border w-full p-2 mb-3 rounded" required />
+
+      <label class="block mb-2 font-semibold">CC (optional):</label>
+      <input type="email" name="cc" class="border w-full p-2 mb-3 rounded" />
+
+      <label class="block mb-2 font-semibold">Support Level:</label>
+      <select name="supportLevel" id="supportLevel" class="border w-full p-2 mb-3 rounded" onchange="updateFields()" required>
+        <option value="">-- Select --</option>
+        <option value="NPMO">NPMO</option>
+        <option value="Regional Support">Regional Support</option>
+        <option value="Provincial Support">Provincial Support</option>
+        <option value="MPMO Support">MPMO Support</option>
+      </select>
+
+      <div id="regionDiv" style="display:none;">
+        <label class="block mb-2 font-semibold">Region:</label>
+        <select name="region" id="region" class="border w-full p-2 mb-3 rounded" onchange="updateProvinceDropdown()"></select>
+      </div>
+
+      <div id="provinceDiv" style="display:none;">
+        <label class="block mb-2 font-semibold">Province:</label>
+        <select name="province" id="province" class="border w-full p-2 mb-3 rounded" onchange="updateMunicipalityDropdown()"></select>
+      </div>
+
+      <div id="municipalityDiv" style="display:none;">
+        <label class="block mb-2 font-semibold">Municipality:</label>
+        <select name="municipality" id="municipality" class="border w-full p-2 mb-3 rounded"></select>
+      </div>
+
+      <label class="block mb-2 font-semibold">Category:</label>
+      <select name="category" class="border w-full p-2 mb-3 rounded" required>
+        <option value="">-- Select Category --</option>
+        <option value="System Access">System Access</option>
+        <option value="Encoding Issues">Encoding Issues</option>
+        <option value="UI/UX">UI/UX</option>
+        <option value="Indicator Computation">Indicator Computation</option>
+        <option value="Report Generation">Report Generation</option>
+        <option value="System Error">System Error</option>
+        <option value="Data Discrepancy">Data Discrepancy</option>
+        <option value="Other">Other</option>
+      </select>
+
+      <label class="block mb-2 font-semibold">Message:</label>
+      <textarea name="message" rows="4" class="border w-full p-2 mb-3 rounded" required></textarea>
+
+      <label class="block mb-2 font-semibold">Attach Files (optional):</label>
+      <input type="file" name="attachments" id="attachments" class="border w-full p-2 mb-3 rounded" multiple />
+
+      <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 w-full">Submit Ticket</button>
+      <p id="status" class="text-center mt-3 font-semibold"></p>
+    </form>
+  </div>
 </body>
 </html>
